Login, Keywords Create/List

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -4,4 +4,8 @@ $accent: #3A58D5;
 $purple: #605CDA;
 $menu-dark: #292C30;
 
+$dark-pink: #82379F;
+
+$heading: #16093C;
+
 $btn-focus-box-shadow: none;
