--- a/assets/styles/components/shared/_header.scss
+++ b/assets/styles/components/shared/_header.scss
@@ -103,7 +103,7 @@
     box-shadow: 0 0 15px 2px $purple;
     padding: 1rem 2rem;
     z-index: 20;
-
+    background-color: #fff;
 
     &.active {
         display: flex;
