--- a/assets/styles/components/shared/_sidebar.scss
+++ b/assets/styles/components/shared/_sidebar.scss
@@ -6,6 +6,7 @@
     height: 100%;
     width: 110px;
     background-color: #1E2125;
+    z-index: 100;
     transition: 0.2s ease-in-out;
 
     &:hover {
