Keyword Finder Edit and Create

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -21,6 +21,7 @@
  * Global Styles
  */
 @import './components/shared/headings';
+@import './components/shared/transitions';
 @import './components/global';
 
 a:focus, button:focus, .btn:focus {
