--- a/assets/styles/pages/auth.scss
+++ b/assets/styles/pages/auth.scss
@@ -146,6 +146,14 @@
     }
 }
 
+.auth-error {
+    font-size: 1rem;
+    text-align: center;
+    line-height: 1.5rem;
+    margin-top: 0.8rem;
+    color: #db4545;
+}
+
 .auth-btn {
     font-weight: 400 !important;
     font-size: 0.95rem !important;
