--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -9,6 +9,7 @@
 @import '/node_modules/bootstrap/scss/buttons';
 
 @import '/node_modules/bootstrap/scss/utilities/spacing';
+@import '/node_modules/bootstrap/scss/tables';
 
 /**
  * Shared Components
