--- a/assets/styles/components/_global.scss
+++ b/assets/styles/components/_global.scss
@@ -8,23 +8,35 @@ div#__nuxt,
 
 .main-content {
     display: flex;
-    padding-left: 110px;
     background-color: #DADADA;
     min-height: 100vh;
+
+    @include media-breakpoint-up(lg) {
+        padding-left: 110px;
+    }
 }
 
 .content-container {
     margin: 1.5rem 1rem;
-    padding: 2rem 1rem;
+    padding: 1rem 0.35rem;
     flex-grow: 1;
     background-color: #fff;
     border-radius: 25px;
     box-shadow: 0 0px 25px 0px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 
+    @include media-breakpoint-up(lg) {
+        padding: 2rem 1rem;
+    }
+
     .container {
-        padding: 1rem 0;
-        width: 80%;
+        padding: 0;
+        width: 95%;
         margin: 0 auto;
+
+        @include media-breakpoint-up(lg) {
+            padding: 1rem 0;
+            width: 80%;
+        }
     }
 }
 
@@ -37,8 +49,13 @@ div#__nuxt,
 
 .page-head {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
+    @include media-breakpoint-up(lg) {
+        flex-direction: row;
+    }
 }
 
 .section-separator {
