--- a/assets/styles/components/shared/_sidebar.scss
+++ b/assets/styles/components/shared/_sidebar.scss
@@ -65,6 +65,10 @@
         outline: none;
         color: #fff;
         font-size: 2.5rem;
+
+        @include media-breakpoint-up(lg) {
+            display: none;
+        }
     }
 
     &__logo-small {
