--- a/assets/styles/components/shared/_sidebar.scss
+++ b/assets/styles/components/shared/_sidebar.scss
@@ -4,6 +4,7 @@
     left: 0;
     bottom: 0;
     height: 100%;
+    overflow: auto;
     background-color: #1E2125;
     width: 100%;
     z-index: 100;
