--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -9,3 +9,20 @@ $dark-pink: #82379F;
 $heading: #16093C;
 
 $btn-focus-box-shadow: none;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xx: 1400px
+) !default;
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
+  xxl: 1320px
+) !default;
