--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -14,7 +14,8 @@
 @import '/node_modules/bootstrap/scss/utilities/flex';
 @import '/node_modules/bootstrap/scss/tables';
 @import '/node_modules/bootstrap/scss/grid';
-
+@import '/node_modules/bootstrap/scss/badge';
+@import '/node_modules/bootstrap/scss/modal';
 /**
  * Shared Components
  */ 
