--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -31,6 +31,9 @@
 @import './components/shared/transitions';
 @import './components/global';
 
+/** Modules */
+@import './modules/index';
+
 a:focus, button:focus, .btn:focus {
     outline: none;
 }
