--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -16,6 +16,7 @@
 @import '/node_modules/bootstrap/scss/grid';
 @import '/node_modules/bootstrap/scss/badge';
 @import '/node_modules/bootstrap/scss/modal';
+@import '/node_modules/bootstrap/scss/pagination';
 /**
  * Shared Components
  */ 
