--- a/assets/styles/modules/_index.scss
+++ b/assets/styles/modules/_index.scss
@@ -1,6 +1,7 @@
 @import "scorecard/group-selector";
 @import "scorecard/filters";
 @import "scorecard/table";
+@import "scorecard/tabs";
 
 :root {
   --animate-duration: 1s;
