--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -5,7 +5,6 @@
 @import '/node_modules/bootstrap/scss/mixins';
 
 @import '/node_modules/bootstrap/scss/reboot';
-
 @import '/node_modules/bootstrap/scss/buttons';
 
 @import '/node_modules/bootstrap/scss/utilities/spacing';
@@ -28,6 +27,7 @@
 /**
  * Global Styles
  */
+@import './components/shared/buttons';
 @import './components/shared/headings';
 @import './components/shared/transitions';
 @import './components/global';
