--- a/assets/styles/modules/scorecard/_group-selector.scss
+++ b/assets/styles/modules/scorecard/_group-selector.scss
@@ -52,6 +52,10 @@
         &:hover {
             background-color: lighten($gray, 5%);
         }
+
+        &.selected {
+            background-color: darken($gray, 10%);
+        }
     }
 
     &.selected-groups .p-group__item {
